# opengl-gui-cpp

./: .gitignore  CMakeLists.txt  HANDOFF.md  PROJECT_OUTLINE.md  README.md
include/: GUILibrary.hpp  InputManager.hpp  RenderManager.hpp  TextManager.hpp
src/: GUILibrary.cpp  InputManager.cpp  RenderManager.cpp  TextManager.cpp  main.cpp
